RESOLVED FIXED125223
Fix handling of 'inherit' and 'initial' for grid lines
https://bugs.webkit.org/show_bug.cgi?id=125223
Summary Fix handling of 'inherit' and 'initial' for grid lines
Peter Molnar
Reported 2013-12-04 07:28:32 PST
'initial' and 'inherit' are always allowed values for CSS properties. As the CSSParser handles them automatically, those 2 values were never taken care of in StyleResolver. Fix backported from Blink, without the refactoring in the same patch: https://src.chromium.org/viewvc/blink?revision=149257&view=revision
Attachments
Patch (26.10 KB, patch)
2013-12-04 07:31 PST, Peter Molnar
no flags
Patch - ChangeLog updated (27.08 KB, patch)
2013-12-09 04:38 PST, Peter Molnar
no flags
Patch - ChangeLog fixed (27.08 KB, patch)
2013-12-09 05:28 PST, Peter Molnar
no flags
Peter Molnar
Comment 1 2013-12-04 07:31:56 PST
Zoltan Herczeg
Comment 2 2013-12-09 01:29:41 PST
This patch looks good, but let's wait a little maybe others have comments. Please elaborate more about this change in the ChangeLog.
Peter Molnar
Comment 3 2013-12-09 04:38:06 PST
Created attachment 218749 [details] Patch - ChangeLog updated
WebKit Commit Bot
Comment 4 2013-12-09 04:38:47 PST
Attachment 218749 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/fast/css-grid-layout/grid-item-column-row-get-set-expected.txt', u'LayoutTests/fast/css-grid-layout/grid-item-column-row-get-set.html', u'LayoutTests/fast/css-grid-layout/grid-item-end-after-get-set-expected.txt', u'LayoutTests/fast/css-grid-layout/grid-item-end-after-get-set.html', u'LayoutTests/fast/css-grid-layout/grid-item-start-before-get-set-expected.txt', u'LayoutTests/fast/css-grid-layout/grid-item-start-before-get-set.html', u'LayoutTests/fast/css-grid-layout/resources/grid-item-column-row-parsing-utils.js', u'Source/WebCore/ChangeLog', u'Source/WebCore/css/StyleResolver.cpp', u'Source/WebCore/rendering/style/RenderStyle.h', u'Source/WebCore/rendering/style/StyleGridItemData.cpp', '--commit-queue']" exit_code: 1 ERROR: Source/WebCore/ChangeLog:14: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] ERROR: Source/WebCore/ChangeLog:15: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] ERROR: Source/WebCore/ChangeLog:16: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] Total errors found: 3 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
Peter Molnar
Comment 5 2013-12-09 05:28:25 PST
Created attachment 218750 [details] Patch - ChangeLog fixed
WebKit Commit Bot
Comment 6 2013-12-09 11:42:21 PST
Comment on attachment 218750 [details] Patch - ChangeLog fixed Clearing flags on attachment: 218750 Committed r160322: <http://trac.webkit.org/changeset/160322>
WebKit Commit Bot
Comment 7 2013-12-09 11:42:23 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.